--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -12,20 +12,24 @@ server {
     listen 80;
     server_name _;
 
+    # --- API (preserve /api prefix) ---
     location /api/ {
-        proxy_pass http://backend/;
+        proxy_pass http://backend;        # <- no trailing slash (keeps /api)
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_http_version 1.1;
         proxy_set_header Connection "";
+        proxy_read_timeout 60s;
     }
 
+    # --- Frontend (Vite dev server with HMR) ---
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://frontend;       # path preserved
         proxy_http_version 1.1;
         proxy_set_header Host $host;
 
+        # HMR / websockets
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
